--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "next": "16.0.7",
     "nodemailer": "^7.0.10",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-instantsearch": "^7.22.1",
+    "typesense": "^2.1.0",
+    "typesense-instantsearch-adapter": "^2.9.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
