--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@formspree/react": "^3.0.0",
+    "framer-motion": "^12.24.7",
     "geist": "^1.5.1",
     "lucide-react": "^0.552.0",
     "next": "16.0.7",
