--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemailer": "^7.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
     "react-instantsearch": "^7.22.1",
     "typesense": "^2.1.0",
     "typesense-instantsearch-adapter": "^2.9.0"
